--- a/app/webroot/css/cake.generic.css
+++ b/app/webroot/css/cake.generic.css
@@ -54,11 +54,13 @@ h2 {
 	color: #e32;
 	font-family:'Gill Sans','lucida grande', helvetica, arial, sans-serif;
 	font-size: 190%;
+	margin: 20px 0 5px;
 }
 h3 {
 	color: #2c6877;
 	font-family:'Gill Sans','lucida grande', helvetica, arial, sans-serif;
 	font-size: 165%;
+	margin: 15px 0 5px;
 }
 h4 {
 	color: #993;
@@ -70,6 +72,8 @@ ul, li {
 p {
 	margin: 0 0 1em 0;
 }
+
+header{ background-color: white; }
 
 /** Layout **/
 #container {
